[package]
name = "sea-router-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
rstar = "0.12"
geo = "0.29"
dashmap = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
